<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.mjbor.trainingapp.Register.view.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/registerForm"
        >


        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text"
                android:imeOptions="actionNext"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:imeOptions="actionNext"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:imeOptions="actionNext"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
        <EditText
            android:id="@+id/surnameEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/surname"
            android:inputType="text"
            android:imeOptions="actionDone"
            />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15">


        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="submitClicked"
            android:textStyle="bold"
            android:textColor="@color/color1"
            android:background="@color/color3"
            android:text="@string/submit"
            android:padding="20dp"/>

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationZ="2dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>



</LinearLayout>
