<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mjbor.trainingapp.Training.view.TrainingActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/trainingDateTV"
        android:text="2017-09-09"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
    />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/trainingDateTV"
        >

    </android.support.v7.widget.RecyclerView>



    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/failInformation"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:text="@string/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:visibility="gone"
        android:id="@+id/retryButton"
        android:layout_marginTop="10dp"
        android:layout_below="@id/failInformation"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:text="@string/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="retryClick"
        android:textStyle="bold"
        android:textColor="@color/color1"
        android:background="@color/color3"
        android:padding="20dp"/>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingButton"
        android:onClick="addExercise"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@id/recyclerView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="right"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_add_white_24dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="60dp"
        android:id="@+id/relativeLayout">


        <Button
            android:visibility="gone"
            android:id="@+id/saveTrainingButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="saveClicked"
            android:textStyle="bold"
            android:textColor="@color/color1"
            android:background="@color/color3"
            android:text="@string/save"
            android:padding="20dp"/>

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBarTraining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationZ="2dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>



</RelativeLayout>
