<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.mjbor.trainingapp.Register.view.RegisterActivity">

    <TextView
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="24dp"
        android:textStyle="bold"

        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_fragment_title"
        />


    <TextView
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:textSize="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_fragment_info"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        >

        <CheckBox
            android:id="@+id/haventTrainedCheckBox"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_training" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/registerForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/squatEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="Max squat"
                android:imeOptions="actionNext"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/benchPressEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="Max bench press"
                android:imeOptions="actionNext"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/barbellRowEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="Max barbel row"
                android:imeOptions="actionNext"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/ohpEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="Max over head press"
                android:imeOptions="actionNext"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/deadliftEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="Max deadlift"
                android:imeOptions="actionNext"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>


</LinearLayout>
