<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mjbor.trainingapp.Main.view.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@color/colorWhite"
            android:fitsSystemWindows="true"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ProgressBar
                    android:visibility="gone"
                    android:id="@+id/progressBar"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:visibility="visible"
                    android:id="@+id/backImage"
                    app:layout_collapseMode="parallax"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@+id/progressBar"
                    android:layout_alignParentStart="true" />

                <TextView

                    android:visibility="gone"
                    android:id="@+id/topNameTextView"
                    android:layout_alignBottom="@+id/backImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:paddingLeft="10dp"
                    android:paddingBottom="10dp"
                    android:textStyle="bold"
                    android:textSize="35dp"
                    android:text=""/>



            </RelativeLayout>


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:title="Kamil Grosicki"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


        </android.support.design.widget.CollapsingToolbarLayout>



    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/profileImage"
        android:src="@drawable/user_profile"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:elevation="25dp"
        app:pressedTranslationZ="12dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="right"
        android:layout_marginTop="80dp"
        android:layout_marginRight="20dp"
        />

    <android.support.v4.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/ic_person_black_24dp" />

                        <TextView
                            android:id="@+id/surnameTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="9"
                            android:padding="12dp"
                            android:text=""
                            android:textColor="@color/color5"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/ic_email_black_24dp" />

                        <TextView
                            android:id="@+id/emailTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="9"
                            android:padding="12dp"
                            android:text=""
                            android:textColor="@color/color5"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/profile_best_results"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bestResultsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingMultiplier="1.5"
                        android:padding="12dp"
                        android:textSize="13dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/profile_step_counter"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/stepTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingMultiplier="1.5"
                        android:padding="12dp"

                        android:text="wefwefwe"
                        android:textSize="13dp"
                        />


                    <Button
                        android:layout_gravity="center"
                        android:layout_margin="20dp"

                        android:id="@+id/logoutButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:clickable="true"
                        android:onClick="logoutClicked"
                        android:paddingLeft="50dp"
                        android:paddingRight="50dp"
                        android:text="@string/profile_logout"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />

                </LinearLayout>


            </android.support.v7.widget.CardView>


        </RelativeLayout>


    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>